fixing the old code

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8000
-DATABASE_URL=mongodb+srv://admin:admin%402023@cluster0.w5rtgnf.mongodb.net/dashboard
+DATABASE_URL="mongodb+srv://opusdashboard:opusdashboard@gafsicluster.v9trjts.mongodb.net/?retryWrites=true&w=majority&appName=gafsicluster"
 ACCESS_TOKEN_SECRET= "accestokensecret$$123ghjmkjlk9"
 REFRESH_TOKEN_SECRET="rzertyefreshqsdfghjklmzertyuitokensecret$$123456789"
 # 900 = 15 minute 
